--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -112,6 +112,7 @@ body {
     width: 40%;
     background-color: #fff;
 }
+
 /* 
 .skill-main{
     display: grid;
@@ -152,3 +153,88 @@ body {
     color: antiquewhite;
     font-size: 28px;
 } */
+
+
+
+
+/* Project Page */
+.project-page {
+    background-color: #000000;
+    color: #fff;
+}
+
+
+.timeline {
+    margin: auto;
+    max-width: 34.18em;
+}
+
+.checkpoint {
+    /* border: 1px solid #fff; */
+    max-width: 34em;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    position: relative;
+}
+
+.checkpoint div{
+    border: 1px solid #fff;
+    border-radius: 25px;
+    padding: 50px;
+}
+
+.checkpoint:nth-child(odd) {
+    border-left: 3px solid #fff;
+    padding-left: 80px;
+    transform: translateX(250px);
+    /* Removed fixed translate to keep it responsive */
+}
+
+.checkpoint:nth-child(even) {
+    border-right: 3px solid #fff;
+    padding-right: 80px;
+    transform: translateX(-291.5px);
+    /* Ensures symmetry for even checkpoints */
+}
+
+.checkpoint:nth-child(odd)::before,
+.checkpoint:nth-child(even)::before {
+    content: '';
+    background: #fff;
+    width: 72px;
+    height: 3px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.checkpoint:nth-child(odd)::before {
+    left: 0;
+}
+
+.checkpoint:nth-child(even)::before {
+    right: 0;
+}
+
+.checkpoint:nth-child(odd) .sub-checkpoint::before,
+.checkpoint:nth-child(even) .sub-checkpoint::before{
+    content: '';
+    background-color: #fff;
+    box-shadow: 0 0 0.5 #0d71fc;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 50%;
+}
+.checkpoint:nth-child(odd) .sub-checkpoint::before {
+    left: 75px;
+}
+.checkpoint:nth-child(even) .sub-checkpoint::before {
+    right: 75px;
+}
+.lenskartMockUp{
+    background-color: transparent;
+    filter: drop-shadow(20px 20px 30px rgba(235, 126, 126, 0.5));
+}
