--- a/src/Style/Project.css
+++ b/src/Style/Project.css
@@ -1,28 +1,110 @@
 /* Project Page */
-*{
+* {
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
 }
+
 .project-page {
     background-color: #000000;
     color: #fff;
 }
+.Skill-page-header {
+    font-size: 52px;
+    position: relative;
+    width: 15%;
+    margin: 0px 0px 50px 150px;
+    /* background-color: red; */
+}
 
+.line-1 {
+    position: absolute;
+    bottom: 2%;
+    height: 5px;
+    width: 70%;
+    background-color: #fff;
+}
+
+.line-2 {
+    position: absolute;
+    bottom: -14%;
+    height: 5px;
+    width: 40%;
+    background-color: #fff;
+}
+
+.main-box {
+    border-right: 5px solid #fff;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    margin-right: 50%;
+    position: relative;
+}
+
+.main-box2 {
+    border-left: 5px solid #fff;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    margin-left: 49.7%;
+    position: relative;
+}
+
+.goll1 {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: white;
+    border: 2px solid #1f5297;
+    position: absolute;
+    right: -1.7%;
+    top: 48%;
+    z-index: 2;
+}
+.goll2 {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: white;
+    border: 2px solid #1f5297;
+    position: absolute;
+    left: -1.7%;
+    top: 48%;
+    z-index: 2;
+}
+.line1{
+    height: 5px;
+    width: 25%;
+    background-color: #fff;
+    position: absolute;
+    right: 0%;
+    top: 50%;
+}
+.line2{
+    height: 5px;
+    width: 25%;
+    background-color: #fff;
+    position: absolute;
+    left: 0%;
+    top: 50%;
+}
 .Box {
     width: 400px;
     height: 400px;
     border-radius: 25px;
     padding: 50px;
     position: relative;
-    background: repeating-conic-gradient(from var(--aa), #ff2770 0%, #ff2770 5%, transparent 5% ,  transparent 40%, #ff2770 50%);
+    background: repeating-conic-gradient(from var(--aa), #ff2770 0%, #ff2770 5%, transparent 5%, transparent 40%, #ff2770 50%);
     animation: animate 4s linear infinite;
 }
-@property --aa{
+
+@property --aa {
     syntax: "<angle>";
     inherits: false;
     initial-value: 0deg;
 }
+
 @keyframes animate {
     0% {
         /* background: repeating-conic-gradient(from 0deg, #ff2770 0%, #ff2770 5%, transparent 40%, #ff2770 50%); */
@@ -34,6 +116,7 @@
         --aa: 360deg;
     }
 }
+
 .Box::before {
     content: '';
     position: absolute;
@@ -42,7 +125,7 @@
     top: 0%;
     width: 100%;
     height: 100%;
-    background: repeating-conic-gradient(from var(--aa), #45f3ff 0%, #45f3ff 5%, transparent 5% , transparent 40%, #45f3ff 50%);
+    background: repeating-conic-gradient(from var(--aa), #45f3ff 0%, #45f3ff 5%, transparent 5%, transparent 40%, #45f3ff 50%);
     animation: animate 4s linear infinite;
     animation-delay: -1s;
     z-index: 1;
@@ -58,3 +141,4 @@
     border: 3px solid #2d2d39;
 }
 
+;
