--- a/src/Style/Navigation.css
+++ b/src/Style/Navigation.css
@@ -76,6 +76,7 @@ body {
     text-align: center;
     width: 120px;
     align-items: center;
+    /* background-color:red; */
 }
 
 .modeIcone,
@@ -88,5 +89,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     width: 50px;
     height: 50px;
+    padding: 15px;
+    margin: 0px 0px 0px 15px;
     /* background-color: red; */
 }
