--- a/src/Style/contact.css
+++ b/src/Style/contact.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    background-color: #000;
+    /* background-color: #000; */
     color: #fff;
 }
 
@@ -43,7 +43,7 @@ body {
     /* height: 100vh; */
     width: 80%;
     margin: auto;
-    margin-bottom: 5%;
+    /* margin-bottom: 5%; */
 }
 
 .contact-form {
