--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -19,7 +19,7 @@ body {
     position: absolute;
     transform: translate(-50%, 50%);
     left: 50%;
-    top: 0%;
+    top: -10%;
     /* background-color: yellow; */
     width: 80%;
     display: flex;
@@ -73,20 +73,127 @@ body {
     justify-content: space-between;
 }
 
-.MacBook {
-    background-color: transparent !important;
-    /* Force transparency */
-}
-
-.MacBook {
-    background-color: #fff;
-    width: 100px;
-}
-
 .my-detail h1 {
     font-size: 34px;
     color: #fff;
 }
+
+/* Responsive Styles */
+@media (min-width: 300px) and (max-width: 576px) {
+    .main {
+        width: 90%;
+        flex-direction: column;
+        top: -0%;
+    }
+
+    .Welcome {
+        margin: 0px;
+    }
+
+    .title {
+        font-size: 18px;
+        line-height: 32px;
+    }
+
+    .typeWriter {
+        font-size: 18px;
+    }
+
+    .description {
+        font-size: 14px;
+        line-height: 24px;
+        padding-right: 10%;
+    }
+
+    .box-shadow {
+        height: 40px;
+        width: 40px;
+    }
+
+    .toolIcone {
+        width: 80%;
+        margin-top: 10px;
+    }
+
+    .MacBook {
+        display: none;
+    }
+}
+
+
+@media (min-width: 576px) and (max-width: 768px) {
+    .title {
+        font-size: 34px;
+        line-height: 38px;
+    }
+
+    .description {
+        font-size: 16px;
+        line-height: 28px;
+    }
+
+    .box-shadow {
+        height: 45px;
+        width: 45px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+    .title {
+        font-size: 40px;
+        line-height: 44px;
+    }
+
+    .description {
+        font-size: 17px;
+        line-height: 29px;
+    }
+
+    .box-shadow {
+        height: 48px;
+        width: 48px;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+    .title {
+        font-size: 50px;
+        line-height: 54px;
+    }
+
+    .description {
+        font-size: 18px;
+        line-height: 30px;
+    }
+
+    .box-shadow {
+        height: 50px;
+        width: 50px;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1400px) {
+    .title {
+        font-size: 55px;
+        line-height: 58px;
+    }
+
+    .description {
+        font-size: 18px;
+        line-height: 30px;
+    }
+
+    .box-shadow {
+        height: 50px;
+        width: 50px;
+    }
+}
+
+
+
+
+
+
 
 
 
@@ -116,11 +223,12 @@ body {
 }
 
 
-/* .skill-main{
+.skill-main {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     margin: auto;
-} */
+}
+
 /* Odd Boxes */
 .skill-box {
     width: 300px;
@@ -271,12 +379,6 @@ body {
     }
 }
 
-/* .skill-box:hover{
-    background: linear-gradient(145deg, #000000, #000000);
-    box-shadow: rgba(239, 233, 233, 0.3) 0px 5px 15px 3px;
-        
-} */
-
 .sub-skill-box {
     display: flex;
     flex-direction: column;
@@ -286,14 +388,150 @@ body {
     position: relative;
 }
 
-/* .Icone {
-    font-size: 72px;
-    margin-bottom: 10px;
-    color: #E65100;
-} */
-/* 
-.Icone-text {
-    text-align: center;
-    color: antiquewhite;
-    font-size: 28px;
-} */
+/* Mobile Screens (300px to 576px) */
+@media (max-width: 576px) {
+    .Skill-page-header {
+        font-size: 32px;
+        margin: 0%;
+    }
+
+    .line-1,
+    .line-2 {
+        width: 50%;
+    }
+
+    .skill-main {
+        grid-template-columns: 1fr;
+        padding: 0px;
+    }
+
+    .skill-box,
+    .skill-box2 {
+        width: 200px;
+        height: 200px;
+    }
+
+    .sub-skill-box {
+        flex-direction: row;
+    }
+
+    .Icone-text {
+        font-size: 1.2rem;
+    }
+}
+
+/* Small Tablets (576px to 768px) */
+@media (min-width: 576px) and (max-width: 768px) {
+    .Skill-page-header {
+        font-size: 38px;
+        margin-left: 50px;
+        margin-bottom: 30px;
+    }
+
+    .line-1,
+    .line-2 {
+        width: 60%;
+    }
+
+    .skill-main {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .skill-box,
+    .skill-box2 {
+        width: 250px;
+        height: 250px;
+    }
+
+    .sub-skill-box {
+        flex-direction: row;
+    }
+
+    .Icone-text {
+        font-size: 1.8rem;
+    }
+}
+
+/* Tablets (768px to 992px) */
+@media (min-width: 768px) and (max-width: 992px) {
+    .Skill-page-header {
+        font-size: 42px;
+        margin-left: 100px;
+        margin-bottom: 40px;
+    }
+
+    .line-1,
+    .line-2 {
+        width: 65%;
+    }
+
+    .skill-main {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .skill-box,
+    .skill-box2 {
+        width: 270px;
+        height: 270px;
+    }
+
+    .Icone-text {
+        font-size: 2rem;
+    }
+}
+
+/* Desktops (992px to 1200px) */
+@media (min-width: 992px) and (max-width: 1200px) {
+    .Skill-page-header {
+        font-size: 46px;
+        margin-left: 150px;
+        margin-bottom: 50px;
+    }
+
+    .line-1,
+    .line-2 {
+        width: 70%;
+    }
+
+    .skill-main {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .skill-box,
+    .skill-box2 {
+        width: 300px;
+        height: 300px;
+    }
+
+    .Icone-text {
+        font-size: 2.2rem;
+    }
+}
+
+/* Large Desktops (1200px to 1400px) */
+@media (min-width: 1200px) and (max-width: 1400px) {
+    .Skill-page-header {
+        font-size: 52px;
+        margin-left: 200px;
+        margin-bottom: 60px;
+    }
+
+    .line-1,
+    .line-2 {
+        width: 75%;
+    }
+
+    .skill-main {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .skill-box,
+    .skill-box2 {
+        width: 320px;
+        height: 320px;
+    }
+
+    .Icone-text {
+        font-size: 2.5rem;
+    }
+}
