--- a/src/Style/Project.css
+++ b/src/Style/Project.css
@@ -6,9 +6,11 @@
 }
 
 .project-page {
+    overflow: hidden;
     /* background-color: #000000; */
     color: #fff;
 }
+
 .Skill-page-header {
     font-size: 52px;
     position: relative;
@@ -62,6 +64,7 @@
     top: 48%;
     z-index: 2;
 }
+
 .goll2 {
     height: 20px;
     width: 20px;
@@ -73,7 +76,8 @@
     top: 48%;
     z-index: 2;
 }
-.line1{
+
+.line1 {
     height: 5px;
     width: 25%;
     background-color: #fff;
@@ -81,7 +85,8 @@
     right: 0%;
     top: 50%;
 }
-.line2{
+
+.line2 {
     height: 5px;
     width: 25%;
     background-color: #fff;
@@ -89,6 +94,7 @@
     left: 0%;
     top: 50%;
 }
+
 .Box {
     width: 400px;
     height: 400px;
@@ -145,80 +151,287 @@
 
 /* Nina */
 .button--nina {
-	-webkit-transition: background-color 0.3s;
-	transition: background-color 0.3s;
+    -webkit-transition: background-color 0.3s;
+    transition: background-color 0.3s;
 }
-.button--nina > span {
-	display: inline-block;
-	padding: 1em 0;
-	opacity: 0;
-	-webkit-transform: translate3d(0, -10px, 0);
-	transform: translate3d(0, -10px, 0);
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
-	transition: transform 0.3s, opacity 0.3s;
-	-webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
-	transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+
+.button--nina>span {
+    display: inline-block;
+    padding: 1em 0;
+    opacity: 0;
+    -webkit-transform: translate3d(0, -10px, 0);
+    transform: translate3d(0, -10px, 0);
+    -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+    transition: transform 0.3s, opacity 0.3s;
+    -webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+    transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
 }
+
 .button--nina::before {
-	content: attr(data-text);
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	padding: 1em 0;
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
-	transition: transform 0.3s, opacity 0.3s;
-	-webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
-	transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 1em 0;
+    -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+    transition: transform 0.3s, opacity 0.3s;
+    -webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+    transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
 }
+
 .button--nina:hover::before {
-	opacity: 0;
-	-webkit-transform: translate3d(0, 100%, 0);
-	transform: translate3d(0, 100%, 0);
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
 }
-.button--nina:hover > span {
-	opacity: 1;
-	-webkit-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
+
+.button--nina:hover>span {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
-.button--nina:hover > span:nth-child(1) {
-	-webkit-transition-delay: 0.045s;
-	transition-delay: 0.045s;
+
+.button--nina:hover>span:nth-child(1) {
+    -webkit-transition-delay: 0.045s;
+    transition-delay: 0.045s;
 }
-.button--nina:hover > span:nth-child(2) {
-	-webkit-transition-delay: 0.09s;
-	transition-delay: 0.09s;
+
+.button--nina:hover>span:nth-child(2) {
+    -webkit-transition-delay: 0.09s;
+    transition-delay: 0.09s;
 }
-.button--nina:hover > span:nth-child(3) {
-	-webkit-transition-delay: 0.135s;
-	transition-delay: 0.135s;
+
+.button--nina:hover>span:nth-child(3) {
+    -webkit-transition-delay: 0.135s;
+    transition-delay: 0.135s;
 }
-.button--nina:hover > span:nth-child(4) {
-	-webkit-transition-delay: 0.18s;
-	transition-delay: 0.18s;
+
+.button--nina:hover>span:nth-child(4) {
+    -webkit-transition-delay: 0.18s;
+    transition-delay: 0.18s;
 }
-.button--nina:hover > span:nth-child(5) {
-	-webkit-transition-delay: 0.225s;
-	transition-delay: 0.225s;
+
+.button--nina:hover>span:nth-child(5) {
+    -webkit-transition-delay: 0.225s;
+    transition-delay: 0.225s;
 }
-.button--nina:hover > span:nth-child(6) {
-	-webkit-transition-delay: 0.27s;
-	transition-delay: 0.27s;
+
+.button--nina:hover>span:nth-child(6) {
+    -webkit-transition-delay: 0.27s;
+    transition-delay: 0.27s;
 }
-.button--nina:hover > span:nth-child(7) {
-	-webkit-transition-delay: 0.315s;
-	transition-delay: 0.315s;
+
+.button--nina:hover>span:nth-child(7) {
+    -webkit-transition-delay: 0.315s;
+    transition-delay: 0.315s;
 }
-.button--nina:hover > span:nth-child(8) {
-	-webkit-transition-delay: 0.36s;
-	transition-delay: 0.36s;
+
+.button--nina:hover>span:nth-child(8) {
+    -webkit-transition-delay: 0.36s;
+    transition-delay: 0.36s;
 }
-.button--nina:hover > span:nth-child(9) {
-	-webkit-transition-delay: 0.405s;
-	transition-delay: 0.405s;
+
+.button--nina:hover>span:nth-child(9) {
+    -webkit-transition-delay: 0.405s;
+    transition-delay: 0.405s;
 }
-.button--nina:hover > span:nth-child(10) {
-	-webkit-transition-delay: 0.45s;
-	transition-delay: 0.45s;
+
+.button--nina:hover>span:nth-child(10) {
+    -webkit-transition-delay: 0.45s;
+    transition-delay: 0.45s;
+}
+
+
+
+
+/* Media Queries for Responsive Design */
+@media (max-width: 576px) {
+    .Skill-page-header {
+        font-size: 36px;
+        width: 100%;
+        margin: 0px 0px 30px 20px;
+    }
+
+    .line-1 {
+        width: 60%;
+    }
+
+    .line-2 {
+        width: 30%;
+    }
+
+    .main-box,
+    .main-box2 {
+        width: 100%;
+        margin: 0;
+        border: none;
+    }
+
+    .Box {
+        width: 80%;
+        height: auto;
+        padding: 20px;
+        margin: 10px 0;
+    }
+
+    .goll1,
+    .goll2 {
+        /* top: 45%; */
+        display: none;
+    }
+
+    .line1,
+    .line2 {
+        /* width: 50%; */
+        display: none;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+    .Skill-page-header {
+        font-size: 42px;
+        width: 12%;
+        margin: 0px 0px 50px 100px;
+    }
+    .timeLine{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    .line-1 {
+        width: 65%;
+    }
+
+    .line-2 {
+        width: 35%;
+    }
+
+    .main-box,
+    .main-box2 {
+        width: 100%;
+    }
+
+    /* .Box {
+        width: 350px;
+        height: 350px;
+    } */
+
+    .goll1,
+    .goll2 {
+        top: 45%;
+    }
+
+    .line1,
+    .line2 {
+        width: 40%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+    .Skill-page-header {
+        font-size: 48px;
+        width: 10%;
+        margin: 0px 0px 60px 120px;
+    }
+
+    .line-1 {
+        width: 70%;
+    }
+
+    .line-2 {
+        width: 40%;
+    }
+
+    .main-box,
+    .main-box2 {
+        width: 45%;
+    }
+
+    .Box {
+        width: 380px;
+        height: 380px;
+    }
+
+    .goll1,
+    .goll2 {
+        top: 50%;
+    }
+
+    .line1,
+    .line2 {
+        width: 45%;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+    .Skill-page-header {
+        font-size: 52px;
+        width: 8%;
+        margin: 0px 0px 70px 150px;
+    }
+
+    .line-1 {
+        width: 75%;
+    }
+
+    .line-2 {
+        width: 45%;
+    }
+
+    .main-box,
+    .main-box2 {
+        width: 50%;
+    }
+
+    .Box {
+        width: 400px;
+        height: 400px;
+    }
+
+    .goll1,
+    .goll2 {
+        top: 50%;
+    }
+
+    .line1,
+    .line2 {
+        width: 50%;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1400px) {
+    .Skill-page-header {
+        font-size: 52px;
+        width: 15%;
+        margin: 0px 0px 50px 150px;
+    }
+
+    .line-1 {
+        width: 70%;
+    }
+
+    .line-2 {
+        width: 40%;
+    }
+
+    .main-box,
+    .main-box2 {
+        width: 50%;
+    }
+
+    .Box {
+        width: 400px;
+        height: 400px;
+    }
+
+    .goll1,
+    .goll2 {
+        top: 50%;
+    }
+
+    .line1,
+    .line2 {
+        width: 25%;
+    }
 }
