--- a/src/Style/contact.css
+++ b/src/Style/contact.css
@@ -1,112 +1,189 @@
 * {
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    /* background-color: #000; */
-    color: #fff;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  /* background-color: #000; */
+  color: #fff;
 }
 
 .contact-page-header {
-    font-size: 52px;
-    position: relative;
-    width: 15%;
-    margin: 0px 0px 50px 150px;
-    /* background-color: red; */
+  font-size: 52px;
+  position: relative;
+  width: 15%;
+  margin: 0px 0px 50px 150px;
+  /* background-color: red; */
 }
 
 .line-1 {
-    position: absolute;
-    bottom: 2%;
-    height: 5px;
-    width: 70%;
-    background-color: #fff;
+  position: absolute;
+  bottom: 2%;
+  height: 5px;
+  width: 70%;
+  background-color: #fff;
 }
 
 .line-2 {
-    position: absolute;
-    bottom: -14%;
-    height: 5px;
-    width: 40%;
-    background-color: #fff;
+  position: absolute;
+  bottom: -14%;
+  height: 5px;
+  width: 40%;
+  background-color: #fff;
 }
 
 .contact-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* height: 100vh; */
-    width: 80%;
-    margin: auto;
-    /* margin-bottom: 5%; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* height: 100vh; */
+  width: 80%;
+  margin: auto;
+  /* margin-bottom: 5%; */
 }
 
 .contact-form {
-    flex: 1;
-    padding: 20px;
-    background-color: #111;
-    border-radius: 10px;
-    margin-right: 50px;
+  flex: 1;
+  padding: 20px;
+  background-color: #111;
+  border-radius: 10px;
+  margin-right: 50px;
 }
 
 .contact-form h1 {
-    font-size: 4rem;
-    margin-bottom: 40px;
-    font-weight: bold;
+  font-size: 4rem;
+  margin-bottom: 40px;
+  font-weight: bold;
 }
 
 .contact-form form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .contact-form label {
-    margin-bottom: 10px;
-    font-size: 1.2rem;
+  margin-bottom: 10px;
+  font-size: 1.2rem;
 }
 
 .contact-form input,
 .contact-form textarea {
-    margin-bottom: 20px;
-    padding: 15px;
-    background-color: #222;
-    border: none;
-    border-radius: 8px;
-    color: #fff;
-    font-size: 1rem;
+  margin-bottom: 20px;
+  padding: 15px;
+  background-color: #222;
+  border: none;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 1rem;
 }
 
 .contact-form textarea {
-    height: 150px;
+  height: 150px;
 }
 
 .contact-form button {
-    padding: 15px 20px;
-    background-color: #3b82f6;
-    border: none;
-    border-radius: 8px;
-    color: #fff;
-    font-size: 1.2rem;
-    cursor: pointer;
+  padding: 15px 20px;
+  background-color: #3b82f6;
+  border: none;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 1.2rem;
+  cursor: pointer;
 }
 
 .contact-globe {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .global {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background-color: #222;
-    background-color: #fff;
-    /* Replace with globe animation */
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: #222;
+  background-color: #fff;
+  /* Replace with globe animation */
+}
+
+/* Responsive styles */
+/* (max-width: 576px) */
+@media (max-width: 576px) {
+  .contact-page-header {
+    /* width: 100%;
+    font-size: 32px;
+    margin: 0 0 20px 0;
+    text-align: center; */
+    font-size: 42px;
+    width: 80%;
+    margin: 0px 0px 50px 15px;
+  }
+
+  .contact-container {
+    flex-direction: column;
+    width: 90%;
+  }
+
+  .contact-form {
+    margin: 0 0 20px 0;
+  }
+
+  .contact-globe {
+    margin: 20px 0;
+  }
+}
+
+/* (min-width: 576px) and (max-width: 768px) */
+@media (min-width: 576px) and (max-width: 768px) {
+  .contact-page-header {
+    font-size: 40px;
+    margin: 0 0 30px 20px;
+  }
+
+  .contact-container {
+    flex-direction: column;
+    width: 90%;
+  }
+
+  .contact-form {
+    margin: 0 0 20px 0;
+  }
+}
+
+/* (min-width: 768px) and (max-width: 992px) */
+@media (min-width: 768px) and (max-width: 992px) {
+  .contact-page-header {
+    font-size: 48px;
+    margin: 0 0 40px 50px;
+  }
+
+  .contact-container {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
+
+/* (min-width: 992px) and (max-width: 1200px) */
+@media (min-width: 992px) and (max-width: 1200px) {
+  .contact-page-header {
+    font-size: 52px;
+    margin: 0 0 50px 100px;
+  }
+}
+
+/* (min-width: 1200px) and (max-width: 1400px) */
+@media (min-width: 1200px) and (max-width: 1400px) {
+  .contact-page-header {
+    font-size: 56px;
+    margin: 0 0 50px 120px;
+  }
+
+  .contact-container {
+    width: 85%;
+  }
 }
